--- a/fs_folders/gen_css/signout.css
+++ b/fs_folders/gen_css/signout.css
@@ -1,7 +1,7 @@
 #body_wrapper {
     background-color: #f6f7f8;
     color: #000; 
-    margin-top:55px !important;
+    /*margin-top:55px !important;*/
 } 
 
 .header-dropdown-main-container { 
